tests/fixtures/invalid/str_div_float.py
# Cannot divide Str and Float
x: float = "hello" / 1.0
